--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <title>Grid</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- .grid-container>.grid-item.grid-item-$*3 my emmet -->
+    <div class="grid-container">
+      <div class="grid-item grid-item-1">Grid Item 1</div>
+      <div class="grid-item grid-item-2">Grid Item 2</div>
+      <div class="grid-item grid-item-3">Grid Item 3</div>
+      <div class="grid-item grid-item-4">Grid Item 4</div>
+      <div class="grid-item grid-item-5">Grid Item 5</div>
+    </div>
+  </body>
 </html>
